saturn-account-macros/tests/compile_fail/init_without_payer.stderr
error: `init` field requires `payer = <account>` in #[account] attribute
 --> tests/compile_fail/init_without_payer.rs:6:5
  |
6 |     #[account(init, program_id = arch_program::pubkey::Pubkey::default())]
  |     ^
